--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Introduction website for software engineer Jorge Modesto"
+      content="I'm an experienced full-stack engineer with a focus on backend and strong leadership skills. Adept in multiple programming languages and frameworks. Proven track record of delivering high-quality solutions and improving processes. Committed to ongoing education and mentorship."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
