--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YDD4GFVVXZ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YDD4GFVVXZ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-      gtag('config', 'G-YDD4GFVVXZ');
-    </script>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="I'm an experienced full-stack engineer with a focus on backend and strong leadership skills. Adept in multiple programming languages and frameworks. Proven track record of delivering high-quality solutions and improving processes. Committed to ongoing education and mentorship."
-    />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Hi, I'm Jorge 👋</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+            gtag('config', 'G-YDD4GFVVXZ');
+        </script>
+        <meta charset="utf-8" />
+        <link rel="icon" href="favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+        name="description"
+        content="I'm an experienced full-stack engineer with a focus on backend and strong leadership skills. Adept in multiple programming languages and frameworks. Proven track record of delivering high-quality solutions and improving processes. Committed to ongoing education and mentorship."
+        />
+        <title>Jorge Modesto - Remote Staff Software Engineer</title>
+        <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-dark.css" type="text/css">
+        <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <h1>JORGE MODESTO,<h1>
+        <h2>Staff Software Engineer</h2>
+        <hr/>
+        <h3>Hi, I'm Jorge 👋</h2>
+        <p>
+            I'm a Tech Lead / Staff Software Engineer with <9 years experience on leading and developing full-stack solutions end-to-end.
+        </p>
+        <p>
+            Adept in multiple programming languages and frameworks.
+        </p>
+        <p>
+            Proven track record of delivering high-quality solutions, solving cross-reaching problems and improving processes.
+        </p>
+        <p>
+            Committed to ongoing education and mentorship.
+        </p>
+        <p>
+            Today I work mainly with Ruby, Rails, JavaScript, React in the domain of APIs and Account Management at <a href='https://www.rdstation.com/'><bold>RD Station</bold></a>.
+        </p>
+        <h2>Links</h2>
+        Find me on:
+        <ul>
+            <li>linkedin <a href='https://www.linkedin.com/in/jorge-modesto-neto/'>/in/jorge-modesto-neto</a></li>
+            <li>github <a href='https://github.com/jorgemdnt'>@jorgemdnt</a></li>
+        </ul>
+    </body>
 </html>
