--- a/index.html
+++ b/index.html
@@ -19,31 +19,27 @@
         content="I'm an experienced full-stack engineer with a focus on backend and strong leadership skills. Adept in multiple programming languages and frameworks. Proven track record of delivering high-quality solutions and improving processes. Committed to ongoing education and mentorship."
         />
         <title>Jorge Modesto - Remote Staff Software Engineer</title>
-        <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura-dark.css" type="text/css">
+        <link rel="stylesheet" href="https://unpkg.com/modern-normalize@2.0.0/modern-normalize.css"> 
+        <link rel="stylesheet" href="https://unpkg.com/simpledotcss/simple.min.css">
         <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>JORGE MODESTO,<h1>
-        <h2>Staff Software Engineer</h2>
+        <h1>Jorge Modesto</h1>
+        <code>STAFF SOFTWARE ENGINEER</code>
         <hr/>
-        <h3>Hi, I'm Jorge 👋</h2>
+        <h4>Hi, I'm Jorge 👋</h3>
         <p>
             I'm a Tech Lead / Staff Software Engineer with <9 years experience on leading and developing full-stack solutions end-to-end.
         </p>
-        <p>
-            Adept in multiple programming languages and frameworks.
-        </p>
-        <p>
-            Proven track record of delivering high-quality solutions, solving cross-reaching problems and improving processes.
-        </p>
-        <p>
-            Committed to ongoing education and mentorship.
-        </p>
+        <ul>
+            <li>Adept in multiple programming languages and frameworks.</li>
+            <li>Proven track record of delivering high-quality solutions, solving cross-reaching problems and improving processes.</li>
+            <li> Committed to ongoing education and mentorship. </li>
+        </ul>
         <p>
             Today I work mainly with Ruby, Rails, JavaScript, React in the domain of APIs and Account Management at <a href='https://www.rdstation.com/'><bold>RD Station</bold></a>.
         </p>
-        <h2>Links</h2>
-        Find me on:
+        <h3>Find me on:</h3>
         <ul>
             <li>linkedin <a href='https://www.linkedin.com/in/jorge-modesto-neto/'>/in/jorge-modesto-neto</a></li>
             <li>github <a href='https://github.com/jorgemdnt'>@jorgemdnt</a></li>
